# maxminddb-rust-python

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MIGRATION.md  README.md  README.rst  benchmark.py  benchmark_batch.py  benchmark_comprehensive.py  maxminddb.pyi  maxminddb_rust.pyi  pyproject.toml
.github/workflows/: benchmark.yml  codeql.yml  lint.yml  release.yml  test.yml  zizmor.yml
benchmarks/: benchmark.py  benchmark_batch.py  benchmark_comprehensive.py  benchmark_parallel.py  benchmark_path.py  compare_refs.py
dev-bin/: release.sh
examples/: basic_usage.py  batch_processing.py  benchmark.py  benchmark_batch.py  context_manager.py  iterator_demo.py
src/: lib.rs
tests/: concurrency_test.py  get_many_path_test.py  get_many_test.py  introspection_test.py  open_mode_test.py  path_test.py
tests/maxmind/: README.md  reader_test.py
