[package]
name = "maxminddb-pyo3"
version = "0.1.0"
edition = "2021"

[lib]
name = "maxminddb_pyo3"
crate-type = ["cdylib"]

[dependencies]
maxminddb = "0.26.0"
memmap2 = "0.9"
pyo3 = { version = "0.24.0", features = ["extension-module"] }
pythonize = "0.24"
serde_json = "1.0"

[features]
default = ["pyo3/extension-module"]

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
