[package]
name = "maxminddb-rust"
version = "0.5.0"
edition = "2021"
authors = ["Gregory Oschwald <oschwald@gmail.com>"]
description = "Rust-based Python binding for MaxMind DB - high-performance alternative to maxminddb"
license = "ISC"
repository = "https://github.com/oschwald/maxminddb-rust-python"

[lib]
name = "maxminddb_rust"
crate-type = ["cdylib"]

[dependencies]
arc-swap = "1"
ipnetwork = "0.21"
maxminddb = { version = "0.28.1", features = ["simdutf8"] }
memmap2 = "0.9"
pyo3 = { version = "0.29.0", features = ["extension-module"] }
rustc-hash = "2"
self_cell = "1.2.2"
serde = "1.0"

[features]
default = ["pyo3/extension-module"]

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
